--- a/pom.xml
+++ b/pom.xml
@@ -120,10 +120,10 @@
 					</execution>
 				</executions>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>com.spotify</groupId> -->
-<!-- 				<artifactId>dockerfile-maven-plugin</artifactId> -->
-<!-- 				<version>${dockerfile-maven-version}</version> -->
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>${dockerfile-maven-version}</version>
 <!-- 				<executions> -->
 <!-- 					<execution> -->
 <!-- 						<id>build-docker-image</id> -->
@@ -134,14 +134,14 @@
 <!-- 						</goals> -->
 <!-- 					</execution> -->
 <!-- 				</executions> -->
-<!-- 				<configuration> -->
-<!-- 					<repository>indigital/microservice-docker-${project.artifactId}</repository> -->
-<!-- 					<tag>${project.version}</tag> -->
-<!-- 					<buildArgs> -->
-<!-- 						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE> -->
-<!-- 					</buildArgs> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+				<configuration>
+					<repository>indigital/microservice-docker-${project.artifactId}</repository>
+					<tag>${project.version}</tag>
+					<buildArgs>
+						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
