--- a/config-server-repo/config-client-development.properties
+++ b/config-server-repo/config-client-development.properties
@@ -1,7 +1,16 @@
 user.role=Developer
-user.alias=sotobotero
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:h2:mem:product
+user.alias=santiago
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=qwerty
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.generate-ddl= true
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
